--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 REACT_APP_MONO_PUBLIC_KEY=test_pk_your_public_key_here
 
 # API Configuration
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=https://priscomsales-software.onrender.com
 
 # NOTE: NEVER put secret keys (sk_test_, sk_live_, jwt secrets) in frontend!
 # Secret keys belong in backend/.env only
