--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "eslint-plugin-react-hooks": "^5.0.0"
+
   },
   "browserslist": {
     "production": [
@@ -36,6 +38,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
   }
 }
