--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.5",   
+    "react-toastify": "^11.0.5"
   },
- 
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,6 +36,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^3.4.18"
   }
 }
